# GeomagLoc_FactorGraph

./: main.py  pyproject.toml
data/processed/: uji_mag_grid_preview_kriging.npz
factor_graph_opt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geomagloc_factor_graph/: factor_graph.py  mag_map.py  pipeline.py  simulation.py
pictures generated/: final_factor_graph_vs_pdr_tt01_summary.json
